--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
+    "illuminate/database": "^10.0",
+    "illuminate/support": "^10.0",
+    "php": "^8.1"
     },
     "autoload": {
         "psr-4": {
